Se modifica el Proyecto

--- a/producto.html
+++ b/producto.html
@@ -35,7 +35,7 @@
     </nav>
 
     <main class="contenedor">
-        <h1>ReactJS</h1>
+        <h1>Pantalón</h1>
 
         <div class="remera">
             <img class="remera__imagen" src="img/h1.jpg" width="354" height="341" alt="Imagen del producto">
